Add pkg-config as build dependency to help find correct libxml/tree.h

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - libiconv 1.*
     - libxml2 2.*
     - perl
+    - pkg-config
     - python
     - readline 7.*
     - setuptools
