--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,8 @@ source:
     - mdsdcl_Makefile.in.patch
 
 build:
-  number: 1001
-  skip: True  # [win or py3k]
+  number: 1002
+  skip: True  # [win]
 
 requirements:
   build:
@@ -69,7 +69,7 @@ about:
     users to easily construct complete and coherent data sets.
 
     The MDSplus programming interface contains only a few basic
-    commands, simplifyng data access even into complex
+    commands, simplifying data access even into complex
     structures. Using the client/server model, data at remote
     sites can be read or written without file transfers.
     MDSplus includes x-windows and java tools for viewing data
