--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -3,7 +3,7 @@
 # -*- mode: yaml -*-
 
 jobs:
-- job: osx_64
+- job: osx
   pool:
     vmImage: macOS-10.13
   timeoutInMinutes: 240
@@ -12,6 +12,12 @@ jobs:
     matrix:
       osx_python2.7:
         CONFIG: osx_python2.7
+        UPLOAD_PACKAGES: False
+      osx_python3.6:
+        CONFIG: osx_python3.6
+        UPLOAD_PACKAGES: False
+      osx_python3.7:
+        CONFIG: osx_python3.7
         UPLOAD_PACKAGES: False
 
   steps:
@@ -81,4 +87,6 @@ jobs:
       set -x -e
       upload_package ./ ./recipe ./.ci_support/${CONFIG}.yaml
     displayName: Upload recipe
-    condition: not(equals(variables['UPLOAD_PACKAGES'], 'False'))
+    env:
+      BINSTAR_TOKEN: $(BINSTAR_TOKEN)
+    condition: not(eq(variables['UPLOAD_PACKAGES'], 'False'))
