Added packages needed for bootstrapping

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,10 @@ requirements:
     - {{ compiler('cxx') }}
     - {{ compiler('fortran') }}
   host:
+    - automake
+    - autoconf
+    - bison
+    - flex
     - freetds 1.*
     - libiconv
     - libxml2
