Use CC environment variable if defined

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
 
   patches:
     - python_MDSplus_setup.py.patch
+    - tdishr_yylex_TdiHash.gen.patch
 build:
   number: 0
   skip: True  # [win]
