Makefile.inc.in: Patch to remove @AX_GIT_REVISION_TARGETS@

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
   patches:
     - python_MDSplus_setup.py.patch
     - tdishr_yylex_TdiHash.gen.patch
+    - Makefile.inc.in.patch  # [osx]
 build:
   number: 0
   skip: True  # [win]
