Introduced patch for mdstcpip_zlib_zconf.h to get MDSplus to build locally on mac osx

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ source:
     - python_MDSplus_setup.py.patch
     - tdishr_yylex_TdiHash.gen.patch
     - Makefile.inc.in.patch  # [osx]
+    - mdstcpip_zlib_zconf.h.patch  # [osx]
 build:
   number: 1
   skip: true  # [win]
