--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,7 @@ source:
     - tdishr_yylex_TdiHash.gen.patch
     - Makefile.inc.in.patch  # [osx]
     - mdstcpip_zlib_zconf.h.patch  # [osx]
+    - _include_pthread_port.h.patch  # [osx]
 build:
   number: 1
   skip: true  # [win]
